--- a/pipelines/im_classic_pipeline.yaml
+++ b/pipelines/im_classic_pipeline.yaml
@@ -13,11 +13,11 @@ tasks:
     cuts_off_on_success: true
     data_subsamp_freq: 5
 
-  - name: acrobot
-    env: Acrobot-v0
-    policy: expert_policies/classic/Acrobot-v0.h5/snapshots/iter0000100
-    cuts_off_on_success: true
-    data_subsamp_freq: 5
+  # - name: acrobot
+  #   env: Acrobot-v0
+  #   policy: expert_policies/classic/Acrobot-v0.h5/snapshots/iter0000100
+  #   cuts_off_on_success: true
+  #   data_subsamp_freq: 5
 
 
 training:
