updates for ddpg and gail

--- a/pipelines/im_classic_pipeline.yaml
+++ b/pipelines/im_classic_pipeline.yaml
@@ -24,7 +24,7 @@ tasks:
 training:
   full_dataset_num_trajs: 10
   # dataset_num_trajs: [1, 4, 7, 10]
-  dataset_num_trajs: [7]
+  dataset_num_trajs: [10]
   deterministic_expert: false
   # runs: 7
   runs: 1
@@ -93,7 +93,7 @@ training:
 
 
 options:
-  storagedir: imitation_runs/classic3
+  storagedir: imitation_runs/classic10
   traj_subdir: trajs
   checkpt_subdir: checkpoints
 
@@ -104,3 +104,4 @@ options:
     jobname: im_classic
     queue: atlas
     ppn: 2
+    use: False
